feat: introduce status tracking to BackendHealth* entities
feat: introduce status tracking to BackendHealth* entities

feat: introduce status tracking to BackendHealth* entities

 Conflicts:
	carapace-server/src/main/java/org/carapaceproxy/server/backends/BackendHealthStatus.java