@@ -26,17 +26,17 @@ import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
 import com.github.tomakehurst.wiremock.http.Fault;
 import com.github.tomakehurst.wiremock.junit.WireMockRule;
-import java.util.Arrays;
-import java.util.Collection;
+import java.util.List;
 import java.util.Properties;
 import org.carapaceproxy.configstore.PropertiesConfigurationStore;
 import org.carapaceproxy.core.EndpointKey;
 import org.carapaceproxy.core.HttpProxyServer;
 import org.carapaceproxy.core.ProxyRequestsManager;
+import org.carapaceproxy.server.backends.BackendHealthStatus;
 import org.carapaceproxy.server.config.NetworkListenerConfiguration;
 import org.carapaceproxy.utils.RawHttpClient;
 import org.carapaceproxy.utils.TestEndpointMapper;
@@ -50,15 +50,9 @@ import org.junit.runners.Parameterized.Parameters;
 @RunWith(Parameterized.class)
 public class UnreachableBackendTest {
 
-    @Parameters
-    public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
-            {true /*
-             * useCache = true
-             */}, {false /*
-             * useCache = false
-             */}
-        });
+    @Parameters(name = "useCache = {0}")
+    public static Iterable<Boolean> data() {
+        return List.of(true, false);
     }
 
     @Rule
@@ -67,7 +61,7 @@ public class UnreachableBackendTest {
     @Rule
     public TemporaryFolder tmpDir = new TemporaryFolder();
 
-    private boolean useCache = false;
+    private final boolean useCache;
 
     public UnreachableBackendTest(boolean useCache) {
         this.useCache = useCache;
@@ -104,7 +98,7 @@ public class UnreachableBackendTest {
                         </html>
                         """, resp.getBodyString());
             }
-            assertFalse(server.getBackendHealthManager().isAvailable(key));
+            assertSame(server.getBackendHealthManager().getBackendStatus(key), BackendHealthStatus.Status.DOWN);
             assertThat((int) ProxyRequestsManager.PENDING_REQUESTS_GAUGE.get(), is(0));
         }
     }
@@ -142,7 +136,7 @@ public class UnreachableBackendTest {
                         </html>
                         """, resp.getBodyString());
             }
-            assertTrue(server.getBackendHealthManager().isAvailable(key)); // no troubles for new connections
+            assertSame(server.getBackendHealthManager().getBackendStatus(key), BackendHealthStatus.Status.COLD); // no troubles for new connections
             assertThat((int) ProxyRequestsManager.PENDING_REQUESTS_GAUGE.get(), is(0));
         }
     }
@@ -174,7 +168,7 @@ public class UnreachableBackendTest {
                         </html>
                         """, resp.getBodyString());
             }
-            assertTrue(server.getBackendHealthManager().isAvailable(key)); // no troubles for new connections
+            assertSame(server.getBackendHealthManager().getBackendStatus(key), BackendHealthStatus.Status.COLD); // no troubles for new connections
             assertThat((int) ProxyRequestsManager.PENDING_REQUESTS_GAUGE.get(), is(0));
         }
     }
@@ -210,7 +204,7 @@ public class UnreachableBackendTest {
                         </html>
                         """, resp.getBodyString());
             }
-            assertTrue(server.getBackendHealthManager().isAvailable(key));
+            assertSame(server.getBackendHealthManager().getBackendStatus(key), BackendHealthStatus.Status.COLD);
             assertThat((int) ProxyRequestsManager.PENDING_REQUESTS_GAUGE.get(), is(0));
         }
     }
